--- a/cv1/UcetniDoklad/nbproject/project.properties
+++ b/cv1/UcetniDoklad/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ucetnidoklad.UcetniDoklad
+main.class=ucetnidoklad.AdministraceDoklad
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
